# capsolver-python

./: .gitignore  LICENSE  LICENSE.rst  README.md  pyproject.toml  setup.cfg  setup.py
src/capsolver/: __init__.py  __main__.py  api_requestor.py  capsolver.py  capsolver_object.py  check.py  error.py
test/: balance.py  image_text.py  task.py  verify_ssl.py
