[metadata]
name = capsolver
version = 1.0.3
author = capsolver
author_email = capsolver.com@gmail.com
description = capsolver python libary 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/capsolver/capsolver-python
project_urls =
    Bug Tracker = https://github.com/capsolver/capsolver-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src